@@ -5,7 +5,7 @@
 extern size_t patch_size(loki_patch *patch);
 
 /* Calculate the maximum disk space required for patch */
-extern size_t calculate_space(loki_patch *patch);
+extern size_t calculate_space(loki_patch *patch, int unsafe);
 
 /* Calculate the amount of free space on the given path */
 extern size_t available_space(const char *path);
